--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,15 @@
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:wght@100;300;400;700&family=Silkscreen&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Poppins:wght@100;300;400;700&family=Silkscreen&display=swap"
+        rel="stylesheet">
+
     <!-- feather icons -->
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
+
 <body>
     <!-- navbar start -->
     <nav class="navbar">
@@ -47,18 +51,122 @@
 
     <!-- about section start -->
     <section id="about" class="about">
-        <h2><span>Tentang</span> Kami</h2>   
+        <h2><span>Tentang</span> Kami</h2>
         <div class="row">
             <div class="about-img"><img src="img/img kopi.jpg" alt="tentang Kopi"></div>
-            
+
             <div class="content">
                 <h3>Kenapa Memilih Kopi Kami?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab quae cum unde vel ipsa. Similique.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, dolorem repudiandae. Cumque, repellendus numquam nam alias optio natus illum doloribus?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, dolorem repudiandae. Cumque,
+                    repellendus numquam nam alias optio natus illum doloribus?</p>
+            </div>
+        </div>
+    </section>
+    <!-- about section end -->
+
+    <!-- menu section start -->
+    <section id="menu" class="menu">
+        <h2><span>Menu</span> Kami</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur magni veniam optio doloremque minima</p>
+
+        <div class="row">
+            <div class="wor">
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="wor">
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            <div class="menu-card">
+                <img src="img/img espresso.jpg" alt="Espresso" class="menu-card-image">
+                <h3 class="menu-card-title">- Espresso -</h3>
+                <p class="menu-card-price">IDR 15k</p>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- menu section end -->
+
+    <!-- Contact Menu Start -->
+    <section id="contact" class="contact">
+        <h2><span>Kontak</span> Kami</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptatem.</p>
+
+        <div class="row">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7947.926443690579!2d97.45227968908287!3d5.109630165711009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3047f35d25f8c565%3A0xd5b2eadb83566070!2sSamakurok%2C%20Kec.%20Tanah%20Jambo%20Aye%2C%20Kabupaten%20Aceh%20Utara%2C%20Aceh!5e0!3m2!1sid!2sid!4v1722325346577!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+        <form action="" class="form">
+            <div class="input-group">
+                <i data-feather="user"></i>
+                <input type="text" placeholder="Nama">
+            </div>
+            <div class="input-group">
+                <i data-feather="mail"></i>
+                <input type="text" placeholder="Email">
+            </div>
+            <div class="input-group">
+                <i data-feather="phone"></i>
+                <input type="text" placeholder="No. Hp">
+            </div>
+            <button type="submit" class="btn">
+                Kirim Pesan
+            </button>
+        </form>
     </div>
-</div>
-</section>
-<!-- about section end -->
+    </section>
+    <!-- Contact Menu End -->
+
+    <!-- Footer start -->
+    <footer>
+        <div class="social">
+            <a href="#"><i data-feather="instagram"></i></a>
+            <a href="#"><i data-feather="twitter"></i></a>
+            <a href="#"><i data-feather="facebook"></i></a>
+        </div>
+        <div class="links">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#contact">Kontak</a>
+        </div>
+        <div class="credit">
+            <p>Created by <a href="">M.Fajar</a>. | &copy; 2024.</p>
+        </div>
+    </footer>
+    <!-- Footer end -->
 
     <!-- my javaScript -->
     <script src="js/script.js"></script>
@@ -68,4 +176,5 @@
         feather.replace();
     </script>
 </body>
+
 </html>
